[package]
name = "mark53_abyssal_crawler"
version = "0.1.0"
edition = "2021"

[dependencies]
adk-core = { path = "../raw_materials/adk-rust/adk-core" }
adk-agent = { path = "../raw_materials/adk-rust/adk-agent" }
adk-browser = { path = "../raw_materials/adk-rust/adk-browser" }
adk-sandbox = { path = "../raw_materials/adk-rust/adk-sandbox" }
adk-gemini = { path = "../raw_materials/adk-rust/adk-gemini" }
tokio = { version = "1", features = ["full"] }
anyhow = "1"
tracing = "0.1"
reqwest = { version = "0.13.2", features = ["json", "blocking", "rustls"] }
